tried to fix broken link on group-view logo

--- a/src/group-view.html
+++ b/src/group-view.html
@@ -13,12 +13,14 @@
 
 <svg></svg>
 
+
+
 <div class="sidebar">
 <div style="position: relative; text-align: center; margin: 30px 0; height:150px; " >
-<div id = "logo_container">
-<a id="logo_link" href="index.html">
-<div id = "logo_icon"></div>
-<div id = 'logo_name'></div>
+
+<div id ="logo_container">
+<a id ="logo_link" href="../index.html">
+<div id ="logo_icon"></div><div id ='logo_name'></div>
 </a>
 </div>
 </div>
