--- a/src/table-view.html
+++ b/src/table-view.html
@@ -4,10 +4,13 @@
 <script src="../external_js/lodash.js"></script>
 <script src="../external_js/jquery-1.12.2.js"></script>
 <script src="../external_js/jquery-ui.js"></script>
-<link rel="stylesheet" href="../src/sidebar.css">
+<script src="../external_js/jquery.tooltipster.min.js"></script>
+
 <link href="../src/toggle_button.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
 <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+
+<link rel="stylesheet" href="../src/sidebar.css">
 <link rel='stylesheet' href="../src/table-view.css">
 
 <body class = "hideprefs">
@@ -65,7 +68,7 @@
 
 <th id="button_row" colspan="4">
 <div id="control_container">
-<div id="button_container"><button id="groupem_button" class="control_button" disabled>group'em</button></div>
+<div id="button_container" class="tooltip"><button id="groupem_button" class="control_button" disabled>group'em</button></div>
 <div id="group_size_container"><div id="group_size_icon_container"></div></div>
 <div id="increment_container">
 <div id="increase_button_container"><button id="increase_group_size" class="increment_button control_button"></button></div>
@@ -93,6 +96,11 @@ var DRAGGABLE_Z_INDEX = 3;
 var GROUP_SIZE_FADE_SPEED = 50;
 
 var classroom = new Classlist();
+$("#group_size_container").data('students_per_group', MIN_STUDENTS_PER_GROUP);
+
+$("#button_container").tooltipster({
+    position: 'right',
+  });
 
 var parseStudentList = function(classroom) {
   var student_list = $("#add_student_box").val();
@@ -142,16 +150,16 @@ var updateGroupemButton = function(classroom){
   console.log($("#group_size_container").data('students_per_group'))
   if (students_per_group <= classroom.getSize()){
     $("#groupem_button").prop('disabled', false);
+    $("#button_container").tooltipster('content', 'HELLO')
   } else {
     $("#groupem_button").prop('disabled', true);
+    //$("#button_container").tooltipster('content', 'need at least ' + students_per_group + ' students in classroom to create groups of ' + students_per_group);
+    $("#button_container").tooltipster('content', 'HELLO')
   }
 }
 
 var updateStudentsPerGroup = function(classroom, new_students_per_group){ 
-    console.log('updating students per group from ', 
-                $("#group_size_container").data('students_per_group'), 
-                ' to ',
-                new_students_per_group);
+    console.log('updating students per group from ', $("#group_size_container").data('students_per_group'), ' to ', new_students_per_group);
     
     $("#group_size_container").data('students_per_group', new_students_per_group);
     
@@ -165,7 +173,7 @@ var updateStudentsPerGroup = function(classroom, new_students_per_group){
       var iconHTML = '<span id="group_size_icon_4x" class = "group_size_icon">&#xf007&#xf007&#xf007&#xf007</span>';
     } else if (new_students_per_group > 4){
       var iconHTML = '<span id="group_size_icon_nx" class = "group_size_icon"> &#xf235 <p id="group_size_icon_nx_number">' + new_students_per_group + '</p></span>';
-    } 
+    }
     $("#group_size_icon_container").html(iconHTML);
     //$("#group_size_container").fadeOut(GROUP_SIZE_FADE_SPEED).fadeIn('slow')
     updateGroupemButton(classroom);
@@ -450,9 +458,9 @@ $(document).ready(function() {
           console.log('user tried to drop tile in invalid cell')
         }
       }
-    });
+   });
 
-    $(".dont_pair_with").droppable({
+  $(".dont_pair_with").droppable({
       accept: "p",
       drop: function(event,ui) {
         var targetStudentID = $(this).data("studentID");
@@ -471,10 +479,10 @@ $(document).ready(function() {
           console.log('user tried to drop tile in invalid cell')
         }
       }
-    });
+  });
   });
 
-    //drag and drop behavior for pair_with tiles
+  //drag and drop behavior for pair_with tiles
   $("table").on('mouseenter',".tile_prefer", function() {
     $(this).css( 'cursor', 'grabbing' );
     var todrag = $(this);
@@ -577,6 +585,8 @@ $(document).ready(function() {
   
   });
 
+
+
   $('input:checkbox').change(
     function(){
         $("body").toggleClass('hideprefs', !$(this).is(':checked'));
@@ -612,33 +622,6 @@ $(document).ready(function() {
     return typeOK && sizeOK
   }
 
-  // $("#group_size_input").on('focusout', function(){
-  //   var new_students_per_group = parseInt($(this).val());
-  //   if (isValidStudentsPerGroup(new_students_per_group)){
-  //     updateStudentsPerGroup(classroom, new_students_per_group);
-  //     updateLocalStorage(classroom); 
-  //   } else {
-  //     $(this).val($(this).data('students_per_group'));
-  //   }
-  // });
-
-  // $("#group_size_input").on('input', function(e) {
-  //   var charCode = e.which || e.keyCode;
-  //   if (charCode == 13){
-  //     var new_students_per_group = parseInt($(this).val());
-  //     if (isValidStudentsPerGroup(new_students_per_group)){
-  //       updateStudentsPerGroup(classroom, new_students_per_group);
-  //       updateLocalStorage(classroom); 
-  //     } else {
-  //     $(this).val = $(this).data('students_per_group');
-  //   }
-  //     $('#group_size_input').blur();
-  //   }
-  // })
-  // $("#group_size_input").attr('min', MIN_STUDENTS_PER_GROUP)
-  // $("#group_size_input").attr('max', MAX_STUDENTS_PER_GROUP)
-
-  $("#group_size_container").data('students_per_group', MIN_STUDENTS_PER_GROUP);
   
   //group'em button listener
   $("#groupem_button").click(function(){
@@ -672,6 +655,7 @@ $(document).ready(function() {
   updateStudentsPerGroup(classroom, $("#group_size_container").data('students_per_group'));
   updateLocalStorage(classroom);
   console.log('STUDENTS PER GROUP HERE', $("#group_size_container").data('students_per_group'))
+  
 });
 
 </script>
